2005-04-28  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/SmartPtr.h, Atlas/Objects/GenerateObjectFactory.py:
	  Make the footprint of SmartPtr factory the same, and get rid
	  of the nasty C cast from the factory code. Make conversion more
	  efficient by using iterators better.

	* Atlas/Objects/GenerateDecoder.py: Clean up formatting.

2005-04-28  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/GenerateDecoder.py: Cleanups.

	* Atlas/Objects/GenerateObjectFactory.py,
	  Atlas/Objects/objectFactory.h: Embed the code to convert a message
	  into an Object into the Factories class, making the function
	  just a stub.

	* Atlas/Objects/loadDefaults.cpp: Fix some misleading variable names,
	  left over from when we called everything an Object.

2005-04-26  Al Riddoch  <alriddoch@zepler.org>

	* benchmark/Objects_iterator.cpp: New test and benchmark for Objects
	  iterators.

2005-04-25  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/AttributeInfo.py: Don't encode objtype or parents
	  of anonymous entities.

2005-04-19  Al Riddoch  <alriddoch@zepler.org>

	* benchmark/Objects_asMessage.cpp: New benchmark for converting
	  Objects into Messages.

	* Atlas/Objects/gen_cpp.py: Remove explicit Element constructor
	  when converting Objects to Messages as operator= means that it
	  is not required.

2005-04-18  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.5.94, Interface version 0.

2005-04-18  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Utilities/atlas_convert.cpp: Add header required for getopt
	  by some systems.

2005-04-18  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/gen_cpp.py: Improve the efficiency of addToMessage()
	  by avoiding a call to getFoo() when we already have checked the
	  flag.

	* Atlas/Objects/AttributeInfo.py: Improve the efficiency of
	  sendFoo() by avoiding a call to getFoo() when we already have
	  checked the flag.

	* configure.ac: Increment the version for a bugfix release.
