@@ -33,18 +33,22 @@ typedef std::map<const std::string, FactoryMethod> FactoryMap;
 class Factories 
 {
 public:
+    Factories();
+    explicit Factories(const Factories &);
+
     bool hasFactory(const std::string& name);
     Root createObject(const std::string& name);
     Root createObject(const Atlas::Message::MapType & msg);
     std::list<std::string> getKeys();
     int addFactory(const std::string& name, FactoryMethod method);
+
+    static Factories * instance();
 private:
     FactoryMap m_factories;
+    static Factories * m_instance;
 };
     
 extern std::map<const std::string, Root> objectDefinitions;
-extern Factories objectFactory;
-//extern Factories objectInstanceFactory;
 
 Root messageElement2ClassObject(const Atlas::Message::MapType & msg);
 
